syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.payment";
option java_outer_classname = "PaymentProto";

service PaymentService {
  rpc ProcessPayment(PaymentRequest) returns (PaymentResponse);

  rpc StreamPaymentReturn(stream PaymentReturnRequest) returns (stream PaymentReturnResponse);
}

message PaymentRequest {
  int64 user_id = 1;
  int64 event_id = 2;
  float price = 3;
  string payment_method = 4;
  string timestamp = 5;
}


message PaymentResponse {
  bool success = 1;
  string message = 2;
}


message PaymentReturnRequest {
  int64 payment_id = 1;
  float refund_sum = 2;
  string timestamp = 3;
}

message PaymentReturnResponse {
  string payment_id = 1;
  string timestamp = 2;
  string message = 3;
  bool success = 4;
}